--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
 		"@types/bcryptjs": "^2.4.6",
 		"@types/cors": "^2.8.16",
 		"@types/jsonwebtoken": "^9.0.5",
+		"@types/multer": "^1.4.11",
 		"ts-node-dev": "^2.0.0",
 		"typescript": "^5.2.2"
 	},
@@ -24,6 +25,7 @@
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"jsonwebtoken": "^9.0.2",
+		"multer": "^1.4.5-lts.1",
 		"prisma": "^5.6.0"
 	}
 }
