--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.1.0",
+    "nookies": "^2.5.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "sass": "^1.70.0"
   },
   "devDependencies": {
